cleaned up and ready to present demo version

--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} - IME Inventory DB</title>
+    <title>Demo - IME Inventory DB</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -43,7 +43,6 @@
 
 <section class="catDropdown" id="cat1Dropdown">
     <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
         <input type="radio" class="catDropdown__item">Choice 1<br>
         <input type="radio" class="catDropdown__item">Choice 2<br>
         <input type="radio" class="catDropdown__item">Choice 3<br>
@@ -51,56 +50,10 @@
         <input type="radio" class="catDropdown__item">Choice 5<br>
         <input type="radio" class="catDropdown__item">Choice 6<br>
         <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 2</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 3</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 4</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2
     </div>
 </section>
 
 <section class="catDropdown" id="cat2Dropdown">
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
 
     <div class="catDropdown__bucket">
         <p class="catDropdown__text">Bucket 1</p>
@@ -108,9 +61,7 @@
         <input type="radio" class="catDropdown__item">Choice 2<br>
         <input type="radio" class="catDropdown__item">Choice 3<br>
         <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
+        <input type="radio" class="catDropdown__item">Choice 5
     </div>
 
     <div class="catDropdown__bucket">
@@ -127,15 +78,7 @@
         <input type="radio" class="catDropdown__item">Choice 1<br>
         <input type="radio" class="catDropdown__item">Choice 2<br>
         <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 4</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2
+        <input type="radio" class="catDropdown__item">Choice 4
     </div>
 </section>
 
@@ -206,28 +149,16 @@
         <input type="radio" class="catDropdown__item">Choice 2<br>
         <input type="radio" class="catDropdown__item">Choice 3<br>
         <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 2</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
         <input type="radio" class="catDropdown__item">Choice 5
     </div>
+
 
     <div class="catDropdown__bucket">
         <p class="catDropdown__text">Bucket 3</p>
         <input type="radio" class="catDropdown__item">Choice 1<br>
         <input type="radio" class="catDropdown__item">Choice 2<br>
         <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6
+        <input type="radio" class="catDropdown__item">Choice 4
     </div>
 
     <div class="catDropdown__bucket">
@@ -289,32 +220,38 @@
 
 <section class="sidebar">
     <div class="sidebar-divisions__wrapper">
-        <div class="sidebar-divisions__division division--top">
+        <div class="sidebar-divisions__division division--top sidebar-divisions__division--selected" id="all">
             <a class="sidebar-divisions__text" href="#">Search All Divisions</a>
         </div>
-        <div class="sidebar-divisions__division">
+        <div class="sidebar-divisions__division" id="division1">
             <a class="sidebar-divisions__text" href="#">SMCF</a></div>
-        <div class="sidebar-divisions__division border--right">
+        <div class="sidebar-divisions__division border--right" id="division2">
             <a class="sidebar-divisions__text" href="#">BSD</a></div>
-        <div class="sidebar-divisions__division">
+        <div class="sidebar-divisions__division" id="division3">
             <a class="sidebar-divisions__text" href="#">Geosci</a></div>
-        <div class="sidebar-divisions__division border--right">
+        <div class="sidebar-divisions__division border--right" id="division4">
             <a class="sidebar-divisions__text" href="#">MRSEC</a></div>
-        <div class="sidebar-divisions__division border--radius__left">
+        <div class="sidebar-divisions__division border--radius__left" id="division5">
             <a class="sidebar-divisions__text" href="#">PNF</a></div>
-        <div class="sidebar-divisions__division border--right border--radius__right">
+        <div class="sidebar-divisions__division border--right border--radius__right" id="division6">
             <a class="sidebar-divisions__text" href="#">Other</a></div>
     </div>
 
     <div class="sidebar-refine__wrapper">
-        <p class="sidebar-refine__cat">Tags</p>
+        <p class="sidebar-refine__cat">Searching in: SMCF</p>
+
+        <p class="sidebar-refine__cat">Campus</p>
         <ul class="sidebar-refine__list">
-            <li class="sidebar-refine__item">Ancillary</li>
-            <li class="sidebar-refine__item">Characterization</li>
-            <li class="sidebar-refine__item">Etching</li>
-            <li class="sidebar-refine__item">Process Benches</li>
-            <li class="sidebar-refine__item">Lithography</li>
-            <li class="sidebar-refine__item">More ... </li>
+            <li class="sidebar-refine__item">Choice 4</li>
+            <li class="sidebar-refine__item">Choice 5</li>
+        </ul>
+
+        <p class="sidebar-refine__cat">Material</p>
+        <ul class="sidebar-refine__list">
+            <li class="sidebar-refine__item">Bucket 1: Choice 4</li>
+            <li class="sidebar-refine__item">Bucket 3: Choice 5</li>
+            <li class="sidebar-refine__item">Bucket 3: Choice 4</li>
+            <li class="sidebar-refine__item">Bucket 5: Choice 1</li>
         </ul>
 
     </div>
@@ -328,7 +265,7 @@
     <div class="result-block"></div>
     <div class="result-block"></div>
     <div class="result-block"></div>
-    <div class="result-block"></div>
+    <div class="result-block"><p  id="test-block"></p></div>
     <div class="result-block"></div>
     <div class="result-block"></div>
     <div class="result-block"></div>
