--- a/web/static/demo.css
+++ b/web/static/demo.css
@@ -120,19 +120,43 @@ p {
 }
 
 .catNav__cat {
-    width: 150px;
-    margin: auto 10px;
+    width: 170px;
+    margin: auto 0;
 }
 
 .catNav__cat--hover {
     background: lightgray;
-    width: 148px;
+    width: 168px;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
 }
 
 .catNav__text {
     margin: auto;
+}
+
+
+
+/* ============== dropdown ============== */
+.catDropdown {
+    position: absolute;
+    top: 181px;
+    width: 70%;
+    max-width: 940px;
+    min-width: 440px;
+    margin: auto 30px;
+    display: none;
+    border: 1px solid gray;
+    border-top: 1px solid transparent;
+    background: lightgray;
+}
+
+.catDropdown__bucket {
+    margin: 20px auto;
+}
+
+.catDropdown__text {
+    margin-bottom: 20px;
 }
 
 
@@ -192,28 +216,17 @@ p {
     line-height: 1.5em;
 }
 
-
-/* ============== dropdown ============== */
-.catDropdown {
-    position: absolute;
-    top: 181px;
-    width: 70%;
-    max-width: 940px;
-    min-width: 440px;
-    margin: auto 30px;
-    display: none;
-    border: 1px solid gray;
-    border-top: 1px solid transparent;
+.sidebar-divisions__division--selected {
     background: lightgray;
 }
 
-.catDropdown__bucket {
-    margin: 20px auto;
+
+/* =============== refine =============== */
+
+.sidebar-refine__cat {
+    margin: 20px auto 5px;
 }
 
-.catDropdown__text {
-    margin-bottom: 20px;
-}
 
 
 
@@ -251,6 +264,11 @@ p {
 .result-pages__item {
     display: inline;
     min-width: 25px;
+}
+
+#test-block {
+    color: maroon;
+    margin: 10px;
 }
 
 
