added test categories data and yeet them in with jinja

--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <title>Demo - IME Inventory DB</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='demo.css') }}">
     {% block script %}{% endblock %}
 </head>
@@ -32,14 +29,34 @@
 
 <section class="catNav catNav__borderAdjust">
     <div class="catNav catNav__wrapper">
-        <div class="catNav catNav__cat" id="cat1"><p class="catNav__text">Campus</p></div>
-        <div class="catNav catNav__cat" id="cat2"><p class="catNav__text">Material</p></div>
-        <div class="catNav catNav__cat" id="cat3"><p class="catNav__text">Characterization</p></div>
-        <div class="catNav catNav__cat" id="cat4"><p class="catNav__text">Manufacturing</p></div>
-        <div class="catNav catNav__cat" id="cat5"><p class="catNav__text">Other Categories</p></div>
+        {% for cat in cats %}
+        <div class="catNav catNav__cat" id="cat{{loop.index}}"><p class="catNav__text">{{ cat.name }}</p></div>
+        {% endfor %}
     </div>
 </section>
 
+
+<!--------------- dropdown --------------->
+
+{% for cat in cats %}
+<section class="catDropdown" id="cat{{loop.index}}Dropdown">
+    <p>{{ cat.description }}</p>
+
+    {% for k, bucket in cat.buckets.items() %}
+    <div class="catDropdown__bucket">
+
+        <p class="catDropdown__text">{{ bucket.name }}</p>
+        {% for choice in bucket.choices %}
+        <input type="radio" class="catDropdown__item">{{ choice }}<br>
+        {% endfor %}
+
+    </div>
+    {% endfor %}
+
+</section>
+{% endfor %}
+
+{#
 <section class="catDropdown" id="cat1Dropdown">
     <div class="catDropdown__bucket">
         <input type="radio" class="catDropdown__item">Choice 1<br>
@@ -48,173 +65,11 @@
         <input type="radio" class="catDropdown__item">Choice 4<br>
         <input type="radio" class="catDropdown__item">Choice 5<br>
         <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
+        <input type="radio" id="cat1-c7" class="catDropdown__item"><label>Choice 7</label>
     </div>
 </section>
 
-<section class="catDropdown" id="cat2Dropdown">
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 2</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 3</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4
-    </div>
-</section>
-
-<section class="catDropdown" id="cat3Dropdown">
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 2</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 3</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 4</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2
-    </div>
-</section>
-
-<section class="catDropdown" id="cat4Dropdown">
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5
-    </div>
-
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 3</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 4</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2
-    </div>
-</section>
-
-<section class="catDropdown" id="cat5Dropdown">
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 1</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6<br>
-        <input type="radio" class="catDropdown__item">Choice 7
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 2</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 3</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2<br>
-        <input type="radio" class="catDropdown__item">Choice 3<br>
-        <input type="radio" class="catDropdown__item">Choice 4<br>
-        <input type="radio" class="catDropdown__item">Choice 5<br>
-        <input type="radio" class="catDropdown__item">Choice 6
-    </div>
-
-    <div class="catDropdown__bucket">
-        <p class="catDropdown__text">Bucket 4</p>
-        <input type="radio" class="catDropdown__item">Choice 1<br>
-        <input type="radio" class="catDropdown__item">Choice 2
-    </div>
-</section>
+#}
 
 
 <section class="sidebar">
