--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -27,15 +27,6 @@
 </section>
 
 
-<section class="catNav catNav__borderAdjust">
-    <div class="catNav catNav__wrapper">
-        {% for cat in cats %}
-        <div class="catNav catNav__cat" id="cat{{loop.index}}"><p class="catNav__text">{{ cat.name }}</p></div>
-        {% endfor %}
-    </div>
-</section>
-
-
 <!--------------- dropdown --------------->
 
 {% for cat in cats %}
@@ -60,26 +51,17 @@
 
 
 <section class="sidebar">
-<!--    <div class="sidebar-divisions__wrapper">-->
-<!--        <div class="sidebar-divisions__division division&#45;&#45;top sidebar-divisions__division&#45;&#45;selected" id="all">-->
-<!--            <a class="sidebar-divisions__text" href="#">Search All Divisions</a>-->
-<!--        </div>-->
-<!--        <div class="sidebar-divisions__division" id="division1">-->
-<!--            <a class="sidebar-divisions__text" href="#">SMCF</a></div>-->
-<!--        <div class="sidebar-divisions__division border&#45;&#45;right" id="division2">-->
-<!--            <a class="sidebar-divisions__text" href="#">BSD</a></div>-->
-<!--        <div class="sidebar-divisions__division" id="division3">-->
-<!--            <a class="sidebar-divisions__text" href="#">Geosci</a></div>-->
-<!--        <div class="sidebar-divisions__division border&#45;&#45;right" id="division4">-->
-<!--            <a class="sidebar-divisions__text" href="#">MRSEC</a></div>-->
-<!--        <div class="sidebar-divisions__division border&#45;&#45;radius__left" id="division5">-->
-<!--            <a class="sidebar-divisions__text" href="#">PNF</a></div>-->
-<!--        <div class="sidebar-divisions__division border&#45;&#45;right border&#45;&#45;radius__right" id="division6">-->
-<!--            <a class="sidebar-divisions__text" href="#">Other</a></div>-->
-<!--    </div>-->
+
+    <div class="catNav sidebar-catNav__wrapper">
+        {% for cat in cats %}
+        <div class="catNav sidebar-catNav__cat" id="cat{{loop.index}}">
+            <p class="sidebar-catNav__text">{{ cat.name }}</p>
+        </div>
+        {% endfor %}
+    </div>
 
     <div class="sidebar-refine__wrapper">
-        <p class="sidebar-refine__cat">Searching in: SMCF</p>
+        <p class="sidebar-refine__cat">Searching Criteria</p>
 
         <p class="sidebar-refine__cat">Campus</p>
         <ul class="sidebar-refine__list">
