--- a/web/static/demo.css
+++ b/web/static/demo.css
@@ -10,7 +10,7 @@
 ul {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding-left: 20px;
 }
 
 a {
@@ -37,6 +37,28 @@ body {
 
 p {
     margin: 0;
+}
+
+
+/* ============== Overlay ============== */
+
+.overlay {
+    display: none;
+    position: absolute;
+    width: 70%;
+    max-width: 1000px;
+    height: 100%;
+    background: rgba(100, 100, 100, 0.4);
+}
+
+.overlay-detail {
+    width: 80%;
+    max-width: 800px;
+    height: 80%;
+    background: #ffffff;
+    opacity: 100%;
+    margin: 10% auto;
+    border-radius: 10px;
 }
 
 
@@ -243,6 +265,26 @@ p {
     margin: 20px;
     border: 1px solid gray;
     border-radius: 7px;
+}
+
+.result-block-thumbnail__wrapper {
+    text-align: center;
+    height: 160px;
+    margin: 20px 0 10px;
+}
+
+.result-block-thumbnail__img {
+    max-width: 160px;
+    max-height: 160px;
+}
+
+.result-block-name__wrapper {
+    text-align: center;
+    margin: 10px;
+}
+
+.result-block-name__link {
+    max-width: 160px;
 }
 
 .result-pages__list {
