--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -9,9 +9,23 @@
 </head>
 <body>
 
+<section class="navbar">
+    <div class="navbar-link__wrapper"><a href="#">About</a></div>
+    <div class="navbar-link__wrapper"><a href="#">Contact</a></div>
+</section>
+
 <section class="overlay">
     <div class="overlay-detail">
-        Details
+        <p class="overlay-detail-title">Equipment Name</p>
+        <ul>
+            <li>Division:</li>
+            <li>Campus:</li>
+            <li>Material:</li>
+            <li>Characterization:</li>
+            <li>Overview:</li>
+            <li>Contact: </li>
+            <li>Link to Manual: </li>
+        </ul>
     </div>
 </section>
 
@@ -94,29 +108,20 @@
         </div>
     </div>
     {% endfor %}
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"><p  id="test-block"></p></div>-->
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"></div>-->
-<!--    <div class="result-block"></div>-->
 
 
 
-    <div class="result-pages__wrapper">
-        <ul class="result-pages__list">
-            <li class="result-pages__item">1</li>
-            <li class="result-pages__item">2</li>
-            <li class="result-pages__item">3</li>
-            <li class="result-pages__item">4</li>
-            <li class="result-pages__item">5</li>
-            <li class="result-pages__item">...</li>
-            <li class="result-pages__item">9</li>
-        </ul>
-    </div>
+<!--    <div class="result-pages__wrapper">-->
+<!--        <ul class="result-pages__list">-->
+<!--            <li class="result-pages__item">1</li>-->
+<!--            <li class="result-pages__item">2</li>-->
+<!--            <li class="result-pages__item">3</li>-->
+<!--            <li class="result-pages__item">4</li>-->
+<!--            <li class="result-pages__item">5</li>-->
+<!--            <li class="result-pages__item">...</li>-->
+<!--            <li class="result-pages__item">9</li>-->
+<!--        </ul>-->
+<!--    </div>-->
 </section>
 
 <section class="footer">
